--- a/StopWatchTimer/Base.lproj/Main.storyboard
+++ b/StopWatchTimer/Base.lproj/Main.storyboard
@@ -24,6 +24,9 @@
                                     <segment title="Start"/>
                                     <segment title="Stop"/>
                                 </segments>
+                                <connections>
+                                    <action selector="StartStopSegmentIndexChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="7fq-Vw-MLf"/>
+                                </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Format Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNy-Cu-S8t">
                                 <rect key="frame" x="16" y="64" width="568" height="43"/>
@@ -38,9 +41,12 @@
                                     <segment title="M.S.T."/>
                                     <segment title="S.T."/>
                                 </segments>
+                                <connections>
+                                    <action selector="FormatSegmentIndexChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="0o0-Jr-pEP"/>
+                                </connections>
                             </segmentedControl>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NZ4-O7-ew9">
-                                <rect key="frame" x="16" y="499" width="568" height="63"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NZ4-O7-ew9">
+                                <rect key="frame" x="16" y="507" width="568" height="55"/>
                                 <color key="backgroundColor" red="1" green="0.038924667284338743" blue="0.20362164984891695" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="NZ4-O7-ew9" secondAttribute="height" multiplier="568:63" id="xol-xm-n9h"/>
@@ -55,6 +61,9 @@
                                         <exclude reference="xol-xm-n9h"/>
                                     </mask>
                                 </variation>
+                                <connections>
+                                    <action selector="ResetTimeButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ipp-uL-P0g"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dIe-Jy-XqF">
                                 <rect key="frame" x="16" y="211" width="568" height="223"/>
@@ -95,6 +104,12 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="FormatSegment" destination="jOK-Sq-XDT" id="FcE-so-8Tn"/>
+                        <outlet property="StartStopSegment" destination="Qbd-fm-HAf" id="LlH-c6-6mQ"/>
+                        <outlet property="TimeLabel" destination="dIe-Jy-XqF" id="x5X-yd-G2q"/>
+                        <outlet property="TimerStartStopSegment" destination="8bC-Xf-vdC" id="Fhn-m2-vpk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
