--- a/StopWatchTimer/Base.lproj/Main.storyboard
+++ b/StopWatchTimer/Base.lproj/Main.storyboard
@@ -19,23 +19,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Qbd-fm-HAf">
-                                <rect key="frame" x="16" y="28" width="568" height="29"/>
+                                <rect key="frame" x="16" y="65" width="568" height="29"/>
                                 <segments>
                                     <segment title="Start"/>
                                     <segment title="Stop"/>
                                 </segments>
                                 <connections>
-                                    <action selector="StartStopSegmentIndexChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="7fq-Vw-MLf"/>
+                                    <action selector="startStopSegmentIndexChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Z5O-NH-YSa"/>
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Format Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNy-Cu-S8t">
-                                <rect key="frame" x="16" y="64" width="568" height="43"/>
+                                <rect key="frame" x="16" y="101" width="568" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jOK-Sq-XDT">
-                                <rect key="frame" x="16" y="115" width="568" height="29"/>
+                                <rect key="frame" x="16" y="152" width="568" height="29"/>
                                 <segments>
                                     <segment title="H.M.S."/>
                                     <segment title="M.S.T."/>
@@ -46,7 +46,7 @@
                                 </connections>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NZ4-O7-ew9">
-                                <rect key="frame" x="16" y="507" width="568" height="55"/>
+                                <rect key="frame" x="16" y="522" width="568" height="55"/>
                                 <color key="backgroundColor" red="1" green="0.038924667284338743" blue="0.20362164984891695" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="NZ4-O7-ew9" secondAttribute="height" multiplier="568:63" id="xol-xm-n9h"/>
@@ -65,8 +65,28 @@
                                     <action selector="ResetTimeButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ipp-uL-P0g"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EBJ-2n-Atd">
+                                <rect key="frame" x="16" y="455" width="568" height="55"/>
+                                <color key="backgroundColor" red="0.29023981243564434" green="0.58197269683501529" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="EBJ-2n-Atd" secondAttribute="height" multiplier="568:63" id="ZQC-DS-j7b"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
+                                <state key="normal" title="Save">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="ZQC-DS-j7b"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="saveTimeButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1YD-px-1ma"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dIe-Jy-XqF">
-                                <rect key="frame" x="16" y="211" width="568" height="223"/>
+                                <rect key="frame" x="16" y="188" width="568" height="223"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="dIe-Jy-XqF" secondAttribute="height" multiplier="568:223" id="Qfq-T6-1g4"/>
                                 </constraints>
@@ -74,45 +94,97 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GDz-kB-4R9">
+                                <rect key="frame" x="504" y="20" width="80" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="GDz-kB-4R9" secondAttribute="height" multiplier="11:2" id="1OT-7v-qY6"/>
+                                    <constraint firstAttribute="width" secondItem="GDz-kB-4R9" secondAttribute="height" multiplier="43:30" id="9IF-F3-L1d"/>
+                                    <constraint firstAttribute="height" constant="30" id="T1w-D8-C0q"/>
+                                </constraints>
+                                <state key="normal" title="View Saved">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="1OT-7v-qY6"/>
+                                        <exclude reference="9IF-F3-L1d"/>
+                                        <exclude reference="T1w-D8-C0q"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="viewSavedButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DGr-ip-yjV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="jOK-Sq-XDT" firstAttribute="top" secondItem="aNy-Cu-S8t" secondAttribute="bottom" constant="8" id="10K-hk-fbS"/>
+                            <constraint firstItem="jOK-Sq-XDT" firstAttribute="top" secondItem="aNy-Cu-S8t" secondAttribute="bottom" constant="8" id="1O0-Cm-LS3"/>
                             <constraint firstItem="Qbd-fm-HAf" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="23B-a4-qFm"/>
+                            <constraint firstItem="NZ4-O7-ew9" firstAttribute="top" secondItem="EBJ-2n-Atd" secondAttribute="bottom" constant="12" id="29F-SY-IXe"/>
                             <constraint firstItem="aNy-Cu-S8t" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="2Q1-YI-ryF"/>
                             <constraint firstItem="jOK-Sq-XDT" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="2jf-nR-veK"/>
-                            <constraint firstItem="aNy-Cu-S8t" firstAttribute="top" secondItem="Qbd-fm-HAf" secondAttribute="bottom" constant="8" id="2sT-Ht-Xb4"/>
+                            <constraint firstItem="GDz-kB-4R9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="3d2-ZB-HIy"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NZ4-O7-ew9" secondAttribute="bottom" constant="38" id="4ul-h8-Ow3"/>
                             <constraint firstItem="jOK-Sq-XDT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="7V7-0V-scY"/>
+                            <constraint firstItem="GDz-kB-4R9" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="B1r-3A-7OG"/>
+                            <constraint firstItem="GDz-kB-4R9" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="E6W-yK-jOv"/>
+                            <constraint firstItem="aNy-Cu-S8t" firstAttribute="top" secondItem="Qbd-fm-HAf" secondAttribute="bottom" constant="8" id="KTv-7N-jSC"/>
                             <constraint firstItem="Qbd-fm-HAf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="KiF-yQ-Xot"/>
+                            <constraint firstItem="GDz-kB-4R9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-14" id="OPR-Ce-vxz"/>
+                            <constraint firstItem="EBJ-2n-Atd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Sgs-2p-U4J"/>
                             <constraint firstItem="aNy-Cu-S8t" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Tgg-ak-aAc"/>
                             <constraint firstItem="dIe-Jy-XqF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="U9Q-br-ygq"/>
-                            <constraint firstItem="jOK-Sq-XDT" firstAttribute="top" secondItem="aNy-Cu-S8t" secondAttribute="bottom" constant="8" id="b1Z-Ec-Xrx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GDz-kB-4R9" secondAttribute="trailing" constant="6" id="UMS-Am-PHp"/>
+                            <constraint firstItem="GDz-kB-4R9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="YX4-DD-cuL"/>
+                            <constraint firstItem="dIe-Jy-XqF" firstAttribute="top" secondItem="jOK-Sq-XDT" secondAttribute="bottom" constant="8" id="Z5z-B2-bc5"/>
                             <constraint firstItem="NZ4-O7-ew9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="bkc-Pq-k7s"/>
+                            <constraint firstItem="dIe-Jy-XqF" firstAttribute="top" secondItem="jOK-Sq-XDT" secondAttribute="bottom" constant="29" id="cPh-hN-iO7"/>
                             <constraint firstItem="jOK-Sq-XDT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="118" id="drh-LQ-EXV"/>
                             <constraint firstItem="NZ4-O7-ew9" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="gaA-1f-HlV"/>
                             <constraint firstItem="NZ4-O7-ew9" firstAttribute="top" secondItem="dIe-Jy-XqF" secondAttribute="bottom" constant="65" id="geH-oC-nxm"/>
-                            <constraint firstItem="dIe-Jy-XqF" firstAttribute="top" secondItem="jOK-Sq-XDT" secondAttribute="bottom" constant="68" id="k7R-8W-LST"/>
-                            <constraint firstItem="Qbd-fm-HAf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="lKG-8P-66G"/>
+                            <constraint firstItem="GDz-kB-4R9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="519" id="hJu-oP-0nv"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GDz-kB-4R9" secondAttribute="trailing" constant="6" id="inW-7a-jS5"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GDz-kB-4R9" secondAttribute="trailing" constant="6" id="joQ-O1-3z4"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NZ4-O7-ew9" secondAttribute="bottom" constant="23" id="keI-fG-PSI"/>
+                            <constraint firstItem="EBJ-2n-Atd" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="lY5-Qx-9I3"/>
                             <constraint firstAttribute="trailingMargin" secondItem="jOK-Sq-XDT" secondAttribute="trailing" constant="77" id="qsI-17-WVD"/>
                             <constraint firstItem="dIe-Jy-XqF" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="rB6-S7-ohT"/>
+                            <constraint firstItem="aNy-Cu-S8t" firstAttribute="top" secondItem="Qbd-fm-HAf" secondAttribute="bottom" constant="8" id="uu7-uY-4c0"/>
+                            <constraint firstItem="Qbd-fm-HAf" firstAttribute="top" secondItem="GDz-kB-4R9" secondAttribute="bottom" constant="15" id="y1r-Cp-Epu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GDz-kB-4R9" secondAttribute="trailing" constant="-23" id="yVR-iC-peE"/>
+                            <constraint firstItem="Qbd-fm-HAf" firstAttribute="top" secondItem="GDz-kB-4R9" secondAttribute="bottom" constant="15" id="ytn-et-UCt"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="ytn-et-UCt"/>
+                                <exclude reference="KTv-7N-jSC"/>
+                                <exclude reference="10K-hk-fbS"/>
                                 <exclude reference="drh-LQ-EXV"/>
                                 <exclude reference="qsI-17-WVD"/>
+                                <exclude reference="cPh-hN-iO7"/>
+                                <exclude reference="B1r-3A-7OG"/>
+                                <exclude reference="OPR-Ce-vxz"/>
+                                <exclude reference="UMS-Am-PHp"/>
+                                <exclude reference="YX4-DD-cuL"/>
+                                <exclude reference="hJu-oP-0nv"/>
+                                <exclude reference="inW-7a-jS5"/>
+                                <exclude reference="joQ-O1-3z4"/>
+                                <exclude reference="yVR-iC-peE"/>
                                 <exclude reference="geH-oC-nxm"/>
+                                <exclude reference="4ul-h8-Ow3"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
                         <outlet property="FormatSegment" destination="jOK-Sq-XDT" id="FcE-so-8Tn"/>
-                        <outlet property="StartStopSegment" destination="Qbd-fm-HAf" id="LlH-c6-6mQ"/>
+                        <outlet property="StartStopSegment" destination="Qbd-fm-HAf" id="Nc7-Ix-6uW"/>
                         <outlet property="TimeLabel" destination="dIe-Jy-XqF" id="x5X-yd-G2q"/>
-                        <outlet property="TimerStartStopSegment" destination="8bC-Xf-vdC" id="Fhn-m2-vpk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="222" y="379"/>
         </scene>
     </scenes>
 </document>
