--- a/StopWatchTimer/Base.lproj/Main.storyboard
+++ b/StopWatchTimer/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -19,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Qbd-fm-HAf">
-                                <rect key="frame" x="16" y="65" width="568" height="29"/>
+                                <rect key="frame" x="20" y="65" width="560" height="29"/>
                                 <segments>
                                     <segment title="Start"/>
                                     <segment title="Stop"/>
@@ -29,13 +30,13 @@
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Format Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNy-Cu-S8t">
-                                <rect key="frame" x="16" y="101" width="568" height="43"/>
+                                <rect key="frame" x="20" y="101" width="560" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jOK-Sq-XDT">
-                                <rect key="frame" x="16" y="152" width="568" height="29"/>
+                                <rect key="frame" x="20" y="152" width="560" height="29"/>
                                 <segments>
                                     <segment title="H.M.S."/>
                                     <segment title="M.S.T."/>
@@ -46,7 +47,7 @@
                                 </connections>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NZ4-O7-ew9">
-                                <rect key="frame" x="16" y="522" width="568" height="55"/>
+                                <rect key="frame" x="20" y="522" width="560" height="55"/>
                                 <color key="backgroundColor" red="1" green="0.038924667284338743" blue="0.20362164984891695" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="NZ4-O7-ew9" secondAttribute="height" multiplier="568:63" id="xol-xm-n9h"/>
@@ -66,7 +67,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EBJ-2n-Atd">
-                                <rect key="frame" x="16" y="455" width="568" height="55"/>
+                                <rect key="frame" x="20" y="455" width="560" height="55"/>
                                 <color key="backgroundColor" red="0.29023981243564434" green="0.58197269683501529" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="EBJ-2n-Atd" secondAttribute="height" multiplier="568:63" id="ZQC-DS-j7b"/>
@@ -86,7 +87,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dIe-Jy-XqF">
-                                <rect key="frame" x="16" y="188" width="568" height="223"/>
+                                <rect key="frame" x="20" y="188" width="560" height="220"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="dIe-Jy-XqF" secondAttribute="height" multiplier="568:223" id="Qfq-T6-1g4"/>
                                 </constraints>
@@ -95,7 +96,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GDz-kB-4R9">
-                                <rect key="frame" x="504" y="20" width="80" height="30"/>
+                                <rect key="frame" x="500" y="20" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="GDz-kB-4R9" secondAttribute="height" multiplier="11:2" id="1OT-7v-qY6"/>
                                     <constraint firstAttribute="width" secondItem="GDz-kB-4R9" secondAttribute="height" multiplier="43:30" id="9IF-F3-L1d"/>
